--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                 <nav class="flex items-center justify-between mb-40">
                     <img src="assets/image/navbar-logo.png" alt="Logo">
 
-                    <button class="px-7 py-3 md:px-9 md:py-4 bg-white font-medium md:font-semibold text-gray-700 text-md rounded-md hover:bg-gray-700 hover:text-white transition ease-linear duration-500">Contact Me</button>
+                    <a href="mailto:minhnhatgd0808@gmail.com" style="text-decoration: none;">
+                        <button class="px-7 py-3 md:px-9 md:py-4 bg-white font-medium md:font-semibold text-gray-700 text-md rounded-md hover:bg-gray-700 hover:text-white transition ease-linear duration-500">Contact Me</button>
+                    </a>
                 </nav>
 
                 <div class="text-center">
@@ -153,7 +155,7 @@
             <div class="container max-w-screen-xl mx-auto px-4">
 
                 <div class="text-center">
-                    <h1 class="font-medium text-gray-700 text-4xl md:text-5xl mb-5">Testimonial</h1>
+                    <h1 class="font-medium text-gray-700 text-4xl md:text-5xl mb-5">Current Status</h1>
 
                     <p class="font-normal text-gray-400 text-md md:text-lg mb-20">Looking for summer internship <br> Feel free to contact me for any inquiry.</p>
 
