update resume link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </p>
         
                     <div class="flex flex-wrap justify-center gap-4">
-                        <a href="/assets/document/Resume.pdf" class="px-7 py-3 md:px-9 md:py-4 font-medium md:font-semibold bg-gray-700 text-gray-50 text-sm rounded-md hover:bg-gray-50 hover:text-gray-700 transition ease-linear duration-500">
+                        <a href="./assets/document/Resume.pdf" class="px-7 py-3 md:px-9 md:py-4 font-medium md:font-semibold bg-gray-700 text-gray-50 text-sm rounded-md hover:bg-gray-50 hover:text-gray-700 transition ease-linear duration-500">
                             My CV
                         </a>
                         <a href="https://www.linkedin.com/in/tranminhnhatpham/" class="px-7 py-3 md:px-9 md:py-4 font-medium md:font-semibold bg-gray-700 text-gray-50 text-sm rounded-md hover:bg-gray-50 hover:text-gray-700 transition ease-linear duration-500">
